--- a/flashcards/src/app.css
+++ b/flashcards/src/app.css
@@ -3,19 +3,31 @@ body {
 }
 
 .card {
-    display: 'flex';
-    justify-content: 'center';
-    align-items: 'center';
-    position: 'relative';
-    border-radius: 0.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-radius: .25rem;
     box-shadow: 0 0 5px 2px rgba(0,0,0,.3);
     background-color: white;
     height: 150px;
     width: 150px;
+    transform-style: preserve-3d;
+    transition: 150ms;
+    transform: perspective(1000px) rotateY(var(--rotate-y, 0));
+}
+
+.card.flip {
+    --rotate-y: 180deg;
 }
 
 .card .front,
 .card .back {
-    position: 'absolute';
+    position: absolute;
     padding: 1rem;
+    backface-visibility: hidden;
+}
+
+.card .back {
+    transform: rotateY(180deg);
 }
